<resources>
    <string name="app_name">newchat</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="hint">hint</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="your_name">Your name</string>
    <string name="sign_in">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="final_sign_in">Sign In</string>
    <string name="welcome">Welcome To NewChat</string>
    <string name="name">Name</string>
    <string name="hi_i_am_using_newchat">Hi I am using NewChat</string>
    <string name="textview">TextView</string>
    <string name="enter_your_message">Enter your message...</string>
    <string name="todo">TODO</string>
</resources>
